# hanz-saenz-todo-app

./: .env.example  .gitignore  README.md  dev_server.py  main.py  mock_server.py  pyproject.toml
.specify/memory/: constitution.md
deploy/: lambda-config.yaml
docs/: base-plan.md
docs/user-stories/: GAP-ANALYSIS.md  US-001-create-todo.md  US-002-list-todos.md  US-003-update-todo.md  US-004-delete-todo.md  US-005-get-single-todo.md  US-006-search-todos.md  US-007-filter-todos-by-status.md  US-008-sort-todos.md  US-009-mark-all-as-completed.md  US-010-clear-completed-todos.md  US-011-get-todo-statistics.md
specs/001-list-todos/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-list-todos/checklists/: requirements.md
specs/001-list-todos/contracts/: openapi.todo-list.yaml
todo/: __init__.py
todo/read/: __init__.py
todo/read/src/: __init__.py
todo/read/src/app/: __init__.py  queries.py
todo/read/src/domain/: __init__.py  exceptions.py  models.py  validation.py
todo/read/src/entrypoints/: __init__.py  api.py  openapi.py
todo/read/src/infra/: config.py  logging.py  repo.py  schema.sql
todo/read/tests/integration/: test_list_todos.py  test_list_todos_complete.py  test_list_todos_filter.py  test_list_todos_sort.py
todo/read/tests/performance/: test_list_performance.py
